# origami

./: README.md  abstract_syntax_tree.py  base_parser.py  lexer.py  main.py  master_script_builder.py  parser.py  pyproject.toml  sql_classes.py  test_script.sql
test_scripts/: create_table.sql  insert_statement.sql  shop_tables.sql  table_operations.sql  update_statements.sql
tests/: test_lexer.py  test_parser.py
