[project]
name = "master-script-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "sqlglot>=27.0.0",
    "ty>=0.0.1a16",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff>=0.12.6",
    "ty>=0.0.1a16",
]
